# CS2022301-Exact-Boolean-Minimization

./: .gitignore  CMakeLists.txt  README.md
examples/set03/: case1.pla  case2.pla  case3.pla
include/: boolean_algebra.hpp  petrick_method.hpp  pla.hpp  qmc.hpp
src/: boolean_algebra.cpp  main.cpp  petrick_method.cpp  pla.cpp  qmc.cpp
